--- a/src/App.css
+++ b/src/App.css
@@ -4,34 +4,75 @@
 }
 
 body {
-  margin: 20px;
+  margin: 0;
   padding: 0;
   font-family: sans-serif;
 }
-.clear {
-  clear: both;
-  content: ""
+
+.home {
+  height: 100vh;
+  width: 100vw;
+  padding: 200px 0;
 }
 
-.game {
-  display: flex;
-  flex-direction: column;
-  margin: 0 auto;
+.clear {
+  clear: both;
+  content: "";
+}
+
+.board {
+  text-align: center;
+}
+
+.game-screen {
+  position: relative;
+}
+
+.game-8 {
+  min-height: 560px;
+}
+
+.game-16 {
+  min-height: 740px;
+}
+
+.game-24 {
+  min-height: 1000px;
+}
+
+.game-container {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .game-info {
-  min-height: 50px;
+  margin-bottom: 20px;
+  background: #19a0d9;
+  padding: 20px;
+  color: #fff;
+  min-height: 100px;
+  border-radius: 7px;
+}
+
+.info {
+  display: block;
+  margin-bottom: 15px;
 }
 
 .cell {
-  background: #fff;
-  border: 1px solid #414c69;
+  background: #7b7b7b;
+  border: 1px solid #fff;
   float: left;
-  line-height: 34px;
-  height: 34px;
+  line-height: 38px;
+  height: 38px;
+  width: 38px;
   text-align: center;
-  width: 34px;
   cursor: pointer;
+  border-radius: 5px;
+  color: #fff;
+  font-weight: 600;
 }
 
 .cell:focus {
@@ -39,7 +80,7 @@ body {
 }
 
 .hidden {
-  background: #7e7b92;
+  background: #2e2829;
 }
 
 .is-flag,
