--- a/src/App.css
+++ b/src/App.css
@@ -87,3 +87,34 @@ body {
 .is-mine {
   color: #fc543c;
 }
+
+button {
+  outline: 0;
+}
+
+.leaderboard {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  /* justify-content: center; */
+  padding: 100px 300px;
+}
+
+table {
+  margin-top: 50px;
+  /* max-width: 1000px; */
+}
+
+.loading-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 100vw;
+  background-color: rgba(255, 255, 255, 0.75);
+  z-index: 9999;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
